@@ -1,3 +1,8 @@
+2019-10-19         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* regcomp.c, regex_internal.c, regex_internal.h,
+	regexec.c: Updated from GNULIB.
+
 2019-08-21         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* intprops.h, verify.h: Sync from GNULIB.
